# genmail_server

./: .env.blank  .gitignore  README.md  docker-compose.yaml
backend_head/: Dockerfile  main.py  pyproject.toml  setup_databases.py
backend_head/src/: __init__.py  head.py
backend_head/src/api/: __init__.py  api_main.py
backend_head/src/api/routes/: __init__.py  chats.py  files_interaction.py  plibrary.py
backend_head/src/api/routes/ws_handle/: __init__.py  events_typing.py  ws_api.py  ws_head.py
backend_head/src/db_handle/: __init__.py  history.py  langchain_chat_history.py  osdb_chat.py
backend_head/src/mail/: __init__.py  extract.py  formalize.py  generate.py  understand.py
config/: config.yaml
config/prompts/en/: dative_form.md  default.md  dialog_for_runnable.md  generate_cypher.md  nominative_form.md  (+4 more)
data_info_handler/document_handler/: Dockerfile  app.py  main.py  pyproject.toml
data_info_handler/document_handler/models/: base.py  data.py  dbutils.py  files.py  transcriptions.py
data_info_handler/document_handler/routes/: files.py  reader.py  transcribe.py
data_info_handler/document_handler/services/: reader.py  reader_tasks.py
data_info_handler/retriever/: Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite-env.d.ts  vite.config.js
frontend/src/: App.css  App.tsx  main.tsx
gm_services/: __init__.py  pyproject.toml
gm_services/database/: __init__.py
gm_services/gm_services/: __init__.py  common.py  config.py  united_schemes.py
gm_services/gm_services/clients/: __init__.py  doc_handler.py  document_handler.py  retriever_client.py
gm_services/gm_services/database/: __init__.py
gm_services/gm_services/database/tablestore/: __init__.py  pg_connection.py  pg_creation.py  pg_sqlalchemy_connector.py
gm_services/gm_services/database/tablestore/table_schemas/: __init__.py  base.py  password.py  position.py  roles.py  user.py  user_position.py  user_roles.py
gm_services/gm_services/database/vectorstore/: __init__.py  osdb_connection.py
gm_services/gm_services/loader/: __init__.py  load_files_vectorbase.py  splitter_logic.py
gm_services/gm_services/neural/llm/: __init__.py  chain_config.py  custom_parsers.py  model.py
gm_services/gm_services/neural/llm/tools/: __init__.py  graph_schema.py  graph_search.py  knowledge_retrieve.py  reference.py  tool_interface.py  tool_runnable.py
gm_services/gm_services/neural/models/: __init__.py  embeddings.py
gm_services/gm_services/schemas/: document_handler.py  extraction.py  generation.py  retriever_schemas.py  understanding.py
model_engine/: pyproject.toml
model_engine/ml_models/embeddings/: Dockerfile  main.py  pyproject.toml
model_engine/ml_models/embeddings/src/: api.py  emb_model.py
(+44 files in other folders)
