[project]
name = "genmail-server-backend-head"
version = "0.1.0"
description = "Backend Head part of genmail on server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27,<0.4.0",
    "opensearch-py>=3.1.0",
    "pydantic>=2.11.9,<3.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "uvicorn>=0.35.0",
]
