[project]
name = "genmail-server-document-handler"
version = "0.1.0"
description = "Document Handler part of genmail on server"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "celery[redis]>=5.3.1",
    "fastapi>=0.128.0",
    "marker-pdf==1.9.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
