[project]
name = "genmail-server-model-engine"
version = "0.1.0"
description = "Module engine part of genmail on server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27,<0.4.0",
    "langchain-huggingface>=0.3.1,<0.4.0",
    "uvicorn>=0.35.0",
]
